# darknote

./: pyproject.toml
darknote/: darknote.py
darknote/templates/: template.html
